# PprzGCS

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Readme.md  TODO  appimage-amd64.yml  build.sh  build_deb.sh  genindex.html  index.html  make_appimage.sh  make_release.sh  objects.inv  pprzgcs_version.sh  search.html  searchindex.js
_sources/: index.rst.txt
_static/: documentation_options.js
assets/: CMakeLists.txt  org.paparazzi.pprzgcs.appdata.xml.in  org.paparazzi.pprzgcs.desktop
data/: default_layout.xml  default_style.qss  fp_editor_layout.xml  gvf_layout.xml  tile_sources.xml
debian/: Readme.md  changelog  control  rules
developer_guide/: aircraft.html  concepts.html  how_to_build.html  index_developer.html  map.html  pprzapplication.html  settings.html  widgets.html
docs/: Makefile
examples/cpp/: CMakeLists.txt  Readme.md  greeter_client.cpp
src/: AircraftManager.cpp  AircraftManager.h  CMakeLists.txt  PprzApplication.cpp  PprzApplication.h  PprzToolbox.cpp  PprzToolbox.h  aircraft.cpp  aircraft.h  app_settings.cpp  app_settings.h  configurator.cpp  configurator.h  configure.cpp  configure.h  dispatcher_ui.cpp  dispatcher_ui.h  flightplan.cpp  flightplan.h  gcs.cpp  gcs.h  globalconfig.cpp  globalconfig.h  layout_builder.cpp  layout_builder.h  main.cpp  pprz_dispatcher.cpp  pprz_dispatcher.h  pprzgcs.xml  pprzmain.cpp  pprzmain.h  pprzmain.ui  pythonutils.cpp  srtm_manager.cpp  srtm_manager.h  uisignals.h  utils.h  wrappedclasses.h
src/common/: CMakeLists.txt  aircraft.cpp  aircraft.h  aircraft_status.cpp  aircraft_status.h  aircraft_watcher.cpp  aircraft_watcher.h  airframe.cpp  airframe.h  block.cpp  block.h  configurable.h  flightplan.cpp  flightplan.h  gcs_utils.cpp  gcs_utils.h  globalstate.cpp  globalstate.h  pprzpalette.cpp  pprzpalette.h  sector.cpp  sector.h  setting.cpp  setting.h  setting_menu.cpp  setting_menu.h  tuple_helpers.h  units.cpp  units.h  waypoint.cpp  waypoint.h
src/geometry/: CMakeLists.txt  cartesian_coor.cpp  cartesian_coor.h  coordinate.cpp  coordinate.h  coordinates.cpp  coordinates.h  coordinatestransform.cpp  coordinatestransform.h  geographic_coordinate.cpp  geographic_coordinate.h  point2dlatlon.cpp  point2dlatlon.h  point2dpseudomercator.cpp  point2dpseudomercator.h  point2dtile.cpp  point2dtile.h  projected_coordinate.cpp  projected_coordinate.h
src/tools/: AircraftManager.cpp  AircraftManager.h  CMakeLists.txt  coordinatestransform.cpp  coordinatestransform.h  dispatcher_ui.cpp  dispatcher_ui.h  grpcconnector.cpp  grpcconnector.h  pprz_dispatcher.cpp  pprz_dispatcher.h  python_plugins.cpp  python_plugins.h  speaker.cpp  speaker.h  srtm_manager.cpp  srtm_manager.h  units.cpp  watcher.cpp  watcher.h
src/widgets/: CMakeLists.txt  ac_selector.cpp  ac_selector.h  ac_selector.ui  chat.cpp  chat.h  chat.ui  checklist.cpp  checklist.h  checklist.ui  commands.cpp  commands.h  flightplan_viewer.cpp  flightplan_viewer.h  flightplan_viewerv2.cpp  flightplan_viewerv2.h  flightplaneditor.cpp  flightplaneditor.h  flightplaneditor.ui  gps_classic_viewer.cpp  gps_classic_viewer.h  grid_viewer.cpp  grid_viewer.h  gvf_viewer.cpp  gvf_viewer.h  layer_combo.cpp  layer_combo.h  link_status.cpp  link_status.h  listcontainer.cpp  listcontainer.h  map2d.cpp  map2d.h  mini_strip.cpp  mini_strip.h  mission_model.cpp  mission_model.h  pfd.cpp  pfd.h  plotter.cpp  (+27 more)
src/widgets/basics/: CMakeLists.txt  chatbubble.cpp  chatbubble.h  chatbubble.ui  colorbar.cpp  colorbar.h  colorlabel.cpp  colorlabel.h  double_slider.cpp  double_slider.h  flowlayout.cpp  flowlayout.h  graphlabel.cpp  graphlabel.h  graphwidget.cpp  graphwidget.h  imagebutton.cpp  imagebutton.h  jaugelabel.cpp  jaugelabel.h  lock_button.cpp  lock_button.h  mbpushbutton.cpp  mbpushbutton.h  sidepanel.cpp  sidepanel.h  switch.cpp  switch.h
src/widgets/map/: CMakeLists.txt  acitemmanager.cpp  acitemmanager.h  circleitem.cpp  circleitem.h  graphicscircle.cpp  graphicscircle.h  graphicsline.cpp  graphicsline.h  graphicsobject.cpp  graphicsobject.h  graphicspoint.cpp  graphicspoint.h  layertab.cpp  layertab.h  map2d.cpp  map2d.h  mapitem.cpp  mapitem.h  maplayercontrol.cpp  maplayercontrol.h  mapscene.cpp  mapscene.h  mapstrip.cpp  mapstrip.h  mapstrip.ui  maputils.cpp  maputils.h  mapwidget.cpp  mapwidget.h  osmtileprovider.cpp  osmtileprovider.h  papget.cpp  papget.h  papgetconfig.cpp  papgetconfig.h  path.cpp  path.h  segment.cpp  segment.h  (+10 more)
src/widgets/map/fpedit_statemachines/: CMakeLists.txt  circleitem_sm.cpp  circleitem_sm.h  fpeditstatemachine.cpp  fpeditstatemachine.h  item_edit_state_machine.cpp  item_edit_state_machine.h  pathitem_sm.cpp  pathitem_sm.h  smcircleitem.cpp  smcircleitem.h  smpathitem.cpp  smpathitem.h  smwaypointitem.cpp  smwaypointitem.h  waypointitem_sm.cpp  waypointitem_sm.h
src/widgets/map/graphics_objects/: CMakeLists.txt  graphics_aircraft.cpp  graphics_aircraft.h  graphics_circle.cpp  graphics_circle.h  graphics_group.cpp  graphics_group.h  graphics_icon.cpp  graphics_icon.h  graphics_intruder.cpp  graphics_intruder.h  graphics_line.cpp  graphics_line.h  graphics_object.cpp  graphics_object.h  graphics_point.cpp  graphics_point.h  graphics_quiver.cpp  graphics_quiver.h  graphics_text.cpp  graphics_text.h  graphics_track.cpp  graphics_track.h
src/widgets/map/gvf_trajectories/: CMakeLists.txt  gvf_traj_3D_ellipse.cpp  gvf_traj_3D_ellipse.h  gvf_traj_3D_lissajous.cpp  gvf_traj_3D_lissajous.h  gvf_traj_bezier.cpp  gvf_traj_bezier.h  gvf_traj_ellipse.cpp  gvf_traj_ellipse.h  gvf_traj_line.cpp  gvf_traj_line.h  gvf_traj_sin.cpp  gvf_traj_sin.h  gvf_traj_trefoil.cpp  gvf_traj_trefoil.h  gvf_trajectory.cpp  gvf_trajectory.h
src/widgets/map/map_items/: CMakeLists.txt  aircraft_item.cpp  aircraft_item.h  arrow_item.cpp  arrow_item.h  circle_item.cpp  circle_item.h  grid_item.cpp  grid_item.h  intruder_item.cpp  intruder_item.h  map_item.cpp  map_item.h  path_item.cpp  path_item.h  quiver_item.cpp  quiver_item.h  waypoint_item.cpp  waypoint_item.h
src/widgets/map/obstacle_points/: CMakeLists.txt  obstacle_grid.cpp  obstacle_grid.h
(+40 files in other folders)
